# House_pricing

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: CI_config.yaml
notebooks/: Experiments.ipynb
src/data_loading/: object_storage.py
src/data_processing/: transform_data.py
src/models/: training.py
