[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-select = ['B950']
extend-ignore = ['E203', 'E501', 'E701']

[tool.poetry]
name = "house_pricing"
version = "0.1.0"
description = ""
authors = ["Gleb <glebolymp@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
flake8 = "^7.0.0"
hydra-core = "^1.3.2"
bandit = "^1.7.8"
wandb = "^0.17.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
optuna = "^3.6.1"
boto3 = "^1.34.122"
mlflow = "^2.13.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
